--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -22,7 +22,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">A Common Security SDK for all VMware Products: Vulnerable App </a>
+                <a class="navbar-brand" href="#">A Common Security SDK for all VMware Products: <span style="font-size:24px; color:rgba(255, 46, 46, 0.808)">Vulnerable App </span> </a>
             </div>
     
         </div>
